--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,27 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
+    <title>Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+    <header class="page-header">
+      <a href="#" class="logo header__logo">
+        <img src="img/logo.svg" alt="логотип Cat energy" class="logo__img">
+      </a>
+      <nav class="site-nav header__site-nav">
+        <ul class="site-nav__list menu">
+          <li class="menu__item">
+            <a href="#">Главная</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">Каталог продукции</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="burger-btn header__burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
+    </header>
   </body>
 </html>
