Добавлена разметка блока с рекламой

--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header class="page-header">
-      <a href="#" class="logo header__logo">
-        <img src="img/logo.svg" alt="логотип Cat energy" class="logo__img">
+      <a class="logo header__logo" href="#">
+        <img class="logo__img" src="img/logo.svg" alt="логотип Cat energy" >
       </a>
       <nav class="site-nav header__site-nav">
         <ul class="site-nav__list menu">
@@ -24,5 +24,14 @@
       </nav>
       <button class="burger-btn header__burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
     </header>
+    <main class="page-main">
+      <h1 class="visually-hidden">Cat energy</h1>
+      <section class="promo">
+        <h2 class="promo__title">Функциональное питание для котов</h2>
+        <p class="promo__intro">Занялся собой? Займись котом!</p>
+        <img class="promo__img" src="img/promo.png" alt="Cat energy Pro с курицей">
+        <a class="btn promo__btn" href="form.html">Подобрать программу</a>
+      </section>
+    </main>
   </body>
 </html>
