--- a/source/index.html
+++ b/source/index.html
@@ -32,6 +32,21 @@
         <img class="promo__img" src="img/promo.png" alt="Cat energy Pro с курицей">
         <a class="btn promo__btn" href="form.html">Подобрать программу</a>
       </section>
+      <section class="nutrition-programs">
+        <h2 class="visually-hidden">Программы питания для котов</h2>
+        <ul class="program-list nutrition-programs__list">
+          <li class="program-list__item program-item">
+            <h3 class="program-item__title">Похудение</h3>
+            <p class="program-item__info">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="program-item__btn" href="#" >Каталог Slim</a>
+          </li>
+          <li class="program-list__item">
+            <h3 class="program-item__title">Набор массы</h3>
+            <p class="program-item__info">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="program-item__btn" href="#" >Каталог Pro</a>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
