Добавлена разметка блока Использование

--- a/source/index.html
+++ b/source/index.html
@@ -47,6 +47,23 @@
           </li>
         </ul>
       </section>
+      <section class="usage">
+        <h2 class="usage__title">Как это работает</h2>
+        <ul class="usage__list process-list">
+          <li class="process-list__item">
+            Функциональноне питание содержит только полезные питательные вещества.
+          </li>
+          <li class="process-list__item">
+            Выпускаются в виде порошка, который нужно лишь залить кипятком и готово.
+          </li>
+          <li class="process-list__item">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </li>
+          <li class="process-list__item">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
