--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,7 @@
         </ul>
       </section>
       <section class="usage">
-        <h2 class="usage__title">Как это работает</h2>
+        <h2 class="usage__title section-title">Как это работает</h2>
         <ul class="usage__list process-list">
           <li class="process-list__item">
             Функциональноне питание содержит только полезные питательные вещества.
@@ -63,6 +63,37 @@
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
           </li>
         </ul>
+      </section>
+      <section class="example">
+        <h2 class="example__title section-title">Живой пример</h2>
+        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <dl class="example__data data">
+          <dt class="data__description">Снижение веса</dt>
+          <dd class="data-value">5 кг</dd>
+        </dl>
+        <dl class="example__data data">
+          <dt class="data__description">Затрачено времени</dt>
+          <dd class="data-value">60 дней</dd>
+        </dl>
+        <b class="example__sum">Затраты на питание:15 000 руб.</b>
+        <figure class="example__photo slider">
+          <ul class="slides-list">
+            <li class="slides-list__item slide">
+              <img class="slide__img" src="img/Boris-before.jpg" alt="кот Борис до похудения">
+            </li>
+            <li class="slides-list__item">
+              <img class="slide__img" src="img/Boris-after.jpg" alt="кот Борис после похудения">
+            </li>
+          </ul>
+          <div class="slider__controls controls">
+            <input class="visually-hidden" id="cat-before" type="radio" name="progress">
+            <label class="controls__label" for="cat-before">Было</label>
+            <span class="controls__radio-btn btn-before"></span>
+            <input class="visually-hidden" id="cat-after" type="radio" name="progress">
+            <label class="controls__label" for="cat-before">Стало</label>
+            <span class="controls__radio-btn btn-after"></span>
+          </div>
+        </figure>
       </section>
     </main>
   </body>
