Добавлена разметка блока контактов

--- a/source/index.html
+++ b/source/index.html
@@ -95,6 +95,11 @@
           </div>
         </figure>
       </section>
+      <section class="contacts">
+       <h2 class="contacts__title">Приглашаем к сотруднечеству дилеров!</h2>
+       <p class="contacts__info">ул. Большая Конюшенная, д. 19/8, Санкт-Петербург</p>
+       <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
+     </section>
     </main>
   </body>
 </html>
