Добавлена разметка подвала сайта

--- a/source/index.html
+++ b/source/index.html
@@ -101,5 +101,24 @@
        <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
      </section>
     </main>
+    <footer class="page-footer">
+      <a class="footer__logo" href="#">
+        <img src="img/footer-logo.svg" alt="Логотип Cat Energy">
+      </a>
+      <ul class="footer__social-list social-buttons">
+        <li class="social-buttons__item">
+          <a class="social-btn" href="#" aria-label="мы ВКонтакте">VK</a>
+        </li>
+        <li class="social-buttons__item">
+          <a class="social-btn" href="#" aria-label="мы в Instagram">Instagram</a>
+        </li>
+        <li class="social-buttons__item">
+          <a class="social-btn" href="#" aria-label="мы в Facebook">Facebook</a>
+        </li>
+      </ul>
+      <div class="footer__copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
