--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,150 @@
       <button class="burger-btn header__burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
     </header>
     <main class="page-main">
-
+     <h1 class="visually-hidden">Каталог Cat Energy</h1>
+      <section class="catalog">
+        <h2 class="catalog__title">Каталог продукции</h2>
+        <ul class="catalog__list products">
+          <li class="products__item product">
+            <img class="product__photo" src="img/chiken-pro500.jpg" alt="Cat Energy Pro 500 г с курицей">
+            <h3 class="product__title">Cat Energy Pro 500 г</h3>
+            <table class="product__info product-feature">
+             <tr>
+               <td class="product-feature__argument">Объем</td>
+               <td class="product-feature__value">500 г</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Вкус</td>
+               <td class="product-feature__value">Курица</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Цена</td>
+               <td class="product-feature__value">700 Р.</td>
+             </tr>
+            </table>
+            <a class="product__btn btn" href="#">Заказать</a>
+          </li>
+          <li class="products__item product">
+            <img class="product__photo" src="img/chiken-pro1000.jpg" alt="Cat Energy Pro 1000 г с курицей">
+            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
+            <table class="product__info product-feature">
+             <tr>
+               <td class="product-feature__argument">Объем</td>
+               <td class="product-feature__value">1000 г</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Вкус</td>
+               <td class="product-feature__value">Курица</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Цена</td>
+               <td class="product-feature__value">1000 Р.</td>
+             </tr>
+            </table>
+            <a class="product__btn btn" href="#">Заказать</a>
+          </li>
+          <li class="products__item product">
+            <img class="product__photo" src="img/fish-pro500.jpg" alt="Cat Energy Pro 500 г с рыбой">
+            <h3 class="product__title">Cat Energy Pro 500 г</h3>
+            <table class="product__info product-feature">
+             <tr>
+               <td class="product-feature__argument">Объем</td>
+               <td class="product-feature__value">500 г</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Вкус</td>
+               <td class="product-feature__value">Рыба</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Цена</td>
+               <td class="product-feature__value">700 Р.</td>
+             </tr>
+            </table>
+            <a class="product__btn btn" href="#">Заказать</a>
+          </li>
+          <li class="products__item product">
+            <img class="product__photo" src="img/fish-pro1000.jpg" alt="Cat Energy Pro 1000 г с рыбой">
+            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
+            <table class="product__info product-feature">
+             <tr>
+               <td class="product-feature__argument">Объем</td>
+               <td class="product-feature__value">1000 г</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Вкус</td>
+               <td class="product-feature__value">Рыба</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Цена</td>
+               <td class="product-feature__value">1000 Р.</td>
+             </tr>
+            </table>
+            <a class="product__btn btn" href="#">Заказать</a>
+          </li>
+          <li class="products__item product">
+            <img class="product__photo" src="img/buckwheat-slim500.jpg" alt="Cat Energy Slim 500 г с гречкой">
+            <h3 class="product__title">Cat Energy Slim 500 г</h3>
+            <table class="product__info product-feature">
+             <tr>
+               <td class="product-feature__argument">Объем</td>
+               <td class="product-feature__value">500 г</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Вкус</td>
+               <td class="product-feature__value">Гречка</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Цена</td>
+               <td class="product-feature__value">400 Р.</td>
+             </tr>
+            </table>
+            <a class="product__btn btn" href="#">Заказать</a>
+          </li>
+          <li class="products__item product">
+            <img class="product__photo" src="img/buckwheat-slim1000.jpg" alt="Cat Energy Pro 1000 г с гречкой">
+            <h3 class="product__title">Cat Energy Slim 1000 г</h3>
+            <table class="product__info product-feature">
+             <tr>
+               <td class="product-feature__argument">Объем</td>
+               <td class="product-feature__value">1000 г</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Вкус</td>
+               <td class="product-feature__value">Гречка</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Цена</td>
+               <td class="product-feature__value">700 Р.</td>
+             </tr>
+            </table>
+            <a class="product__btn btn" href="#">Заказать</a>
+          </li>
+          <li class="products__item product">
+            <img class="product__photo" src="img/rice-slim500.jpg" alt="Cat Energy Slim 500 г с рисом">
+            <h3 class="product__title">Cat Energy Slim 500 г</h3>
+            <table class="product__info product-feature">
+             <tr>
+               <td class="product-feature__argument">Объем</td>
+               <td class="product-feature__value">500 г</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Вкус</td>
+               <td class="product-feature__value">Рис</td>
+             </tr>
+             <tr>
+               <td class="product-feature__argument">Цена</td>
+               <td class="product-feature__value">500 Р.</td>
+             </tr>
+            </table>
+            <a class="product__btn btn" href="#">Заказать</a>
+          </li>
+        </ul>
+        <div class="catalog__all-products more-goods">
+          <h3 class="more-goods__title">Показать еще 100500 товаров</h3>
+          <p class="more-goods__description">На самом деле вкусов гораздо больше!</p>
+          <a class="more-goods__btn btn" href="#">Показать все</a>
+        </div>
+      </section>
     </main>
         <footer class="page-footer">
       <a class="footer__logo" href="#">
