Добавлены ссылки между страницами

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,19 +6,19 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo header__logo" href="#">
+      <a class="logo header__logo" href="index.html">
         <img class="logo__img" src="img/logo.svg" alt="логотип Cat energy" >
       </a>
       <nav class="site-nav header__site-nav">
         <ul class="site-nav__list menu">
           <li class="menu__item">
-            <a href="#">Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="menu__item">
             <a href="#">Каталог продукции</a>
           </li>
           <li class="menu__item">
-            <a href="#">Подбор программы</a>
+            <a href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -170,8 +170,8 @@
         </div>
       </section>
     </main>
-        <footer class="page-footer">
-      <a class="footer__logo" href="#">
+    <footer class="page-footer">
+      <a class="footer__logo" href="index.html">
         <img src="img/footer-logo.svg" alt="Логотип Cat Energy">
       </a>
       <ul class="footer__social-list social-buttons">
