--- a/source/index.html
+++ b/source/index.html
@@ -6,13 +6,13 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo page-header__logo" href="#">
+      <a class="logo page-header__logo">
         <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy" >
       </a>
       <nav class="site-nav page-header__site-nav">
         <ul class="page-header__nav-list menu">
           <li class="page-header__menu-item">
-            <a href="#">Главная</a>
+            <a>Главная</a>
           </li>
           <li class="page-header__menu-item">
             <a href="catalog.html">Каталог продукции</a>
@@ -98,7 +98,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="page-footer__logo" href="#">
+      <a class="page-footer__logo">
         <img src="img/footer-logo.svg" alt="Логотип Cat Energy">
       </a>
       <ul class="page-footer__social-list social-buttons">
