Исправлены имена классов в соответствии с БЭМ

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,186 +6,186 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo header__logo" href="index.html">
-        <img class="logo__img" src="img/logo.svg" alt="логотип Cat energy" >
+      <a class="logo page-header__logo" href="index.html">
+        <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy" >
       </a>
-      <nav class="site-nav header__site-nav">
-        <ul class="site-nav__list menu">
-          <li class="menu__item">
+      <nav class="site-nav page-header__site-nav">
+        <ul class="page-header__nav-list menu">
+          <li class="page-header__menu-item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="menu__item">
-            <a href="#">Каталог продукции</a>
+          <li class="page-header__menu-item">
+            <a>Каталог продукции</a>
           </li>
-          <li class="menu__item">
+          <li class="page-header__menu-item">
             <a href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
-      <button class="burger-btn header__burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
+      <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Каталог Cat Energy</h1>
       <section class="catalog">
         <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list products">
-          <li class="products__item product">
-            <img class="product__photo" src="img/chiken-pro500.jpg" alt="Cat Energy Pro 500 г с курицей">
-            <h3 class="product__title">Cat Energy Pro 500 г</h3>
-            <table class="product__info product-feature">
+          <li class="catalog__item product">
+            <img class="catalog__product-photo" src="img/chiken-pro500.jpg" alt="Cat Energy Pro 500 г с курицей">
+            <h3 class="catalog__product-title">Cat Energy Pro 500 г</h3>
+            <table class="catalog__product-info product-feature">
               <tr>
-                <td class="product-feature__argument">Объем</td>
-                <td class="product-feature__value">500 г</td>
+                <td class="catalog__product-argument">Объем</td>
+                <td class="catalog__product-value">500 г</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Вкус</td>
-                <td class="product-feature__value">Курица</td>
+                <td class="catalog__product-argument">Вкус</td>
+                <td class="catalog__product-value">Курица</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Цена</td>
-                <td class="product-feature__value">700 Р.</td>
+                <td class="catalog__product-argument">Цена</td>
+                <td class="catalog__product-value">700 Р.</td>
               </tr>
             </table>
-            <a class="product__btn btn" href="#">Заказать</a>
+            <a class="catalog__btn btn" href="#">Заказать</a>
           </li>
-          <li class="products__item product">
-            <img class="product__photo" src="img/chiken-pro1000.jpg" alt="Cat Energy Pro 1000 г с курицей">
-            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
-            <table class="product__info product-feature">
+          <li class="catalog__item product">
+            <img class="catalog__product-photo" src="img/chiken-pro1000.jpg" alt="Cat Energy Pro 1000 г с курицей">
+            <h3 class="catalog__product-title">Cat Energy Pro 1000 г</h3>
+            <table class="catalog__product-info product-feature">
               <tr>
-                <td class="product-feature__argument">Объем</td>
-                <td class="product-feature__value">1000 г</td>
+                <td class="catalog__product-argument">Объем</td>
+                <td class="catalog__product-value">1000 г</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Вкус</td>
-                <td class="product-feature__value">Курица</td>
+                <td class="catalog__product-argument">Вкус</td>
+                <td class="catalog__product-value">Курица</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Цена</td>
-                <td class="product-feature__value">1000 Р.</td>
+                <td class="catalog__product-argument">Цена</td>
+                <td class="catalog__product-value">1000 Р.</td>
               </tr>
             </table>
-            <a class="product__btn btn" href="#">Заказать</a>
+            <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
-          <li class="products__item product">
-            <img class="product__photo" src="img/fish-pro500.jpg" alt="Cat Energy Pro 500 г с рыбой">
-            <h3 class="product__title">Cat Energy Pro 500 г</h3>
-            <table class="product__info product-feature">
+          <li class="catalog__item product">
+            <img class="catalog__product-photo" src="img/fish-pro500.jpg" alt="Cat Energy Pro 500 г с рыбой">
+            <h3 class="catalog__product-title">Cat Energy Pro 500 г</h3>
+            <table class="catalog__product-info product-feature">
               <tr>
-                <td class="product-feature__argument">Объем</td>
-                <td class="product-feature__value">500 г</td>
+                <td class="catalog__product-argument">Объем</td>
+                <td class="catalog__product-value">500 г</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Вкус</td>
-                <td class="product-feature__value">Рыба</td>
+                <td class="catalog__product-argument">Вкус</td>
+                <td class="catalog__product-value">Рыба</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Цена</td>
-                <td class="product-feature__value">700 Р.</td>
+                <td class="catalog__product-argument">Цена</td>
+                <td class="catalog__product-value">700 Р.</td>
               </tr>
             </table>
-            <a class="product__btn btn" href="#">Заказать</a>
+            <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
-          <li class="products__item product">
-            <img class="product__photo" src="img/fish-pro1000.jpg" alt="Cat Energy Pro 1000 г с рыбой">
-            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
-            <table class="product__info product-feature">
+          <li class="catalog__item product">
+            <img class="catalog__product-photo" src="img/fish-pro1000.jpg" alt="Cat Energy Pro 1000 г с рыбой">
+            <h3 class="catalog__product-title">Cat Energy Pro 1000 г</h3>
+            <table class="catalog__product-info product-feature">
               <tr>
-                <td class="product-feature__argument">Объем</td>
-                <td class="product-feature__value">1000 г</td>
+                <td class="catalog__product-argument">Объем</td>
+                <td class="catalog__product-value">1000 г</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Вкус</td>
-                <td class="product-feature__value">Рыба</td>
+                <td class="catalog__product-argument">Вкус</td>
+                <td class="catalog__product-value">Рыба</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Цена</td>
-                <td class="product-feature__value">1000 Р.</td>
+                <td class="catalog__product-argument">Цена</td>
+                <td class="catalog__product-value">1000 Р.</td>
               </tr>
             </table>
-            <a class="product__btn btn" href="#">Заказать</a>
+            <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
-          <li class="products__item product">
-            <img class="product__photo" src="img/buckwheat-slim500.jpg" alt="Cat Energy Slim 500 г с гречкой">
-            <h3 class="product__title">Cat Energy Slim 500 г</h3>
-            <table class="product__info product-feature">
+          <li class="catalog__item product">
+            <img class="catalog__product-photo" src="img/buckwheat-slim500.jpg" alt="Cat Energy Slim 500 г с гречкой">
+            <h3 class="catalog__product-title">Cat Energy Slim 500 г</h3>
+            <table class="catalog__product-info product-feature">
               <tr>
-                <td class="product-feature__argument">Объем</td>
-                <td class="product-feature__value">500 г</td>
+                <td class="catalog__product-argument">Объем</td>
+                <td class="catalog__product-value">500 г</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Вкус</td>
-                <td class="product-feature__value">Гречка</td>
+                <td class="catalog__product-argument">Вкус</td>
+                <td class="catalog__product-value">Гречка</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Цена</td>
-                <td class="product-feature__value">400 Р.</td>
+                <td class="catalog__product-argument">Цена</td>
+                <td class="catalog__product-value">400 Р.</td>
               </tr>
             </table>
-            <a class="product__btn btn" href="#">Заказать</a>
+            <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
-          <li class="products__item product">
-            <img class="product__photo" src="img/buckwheat-slim1000.jpg" alt="Cat Energy Pro 1000 г с гречкой">
-            <h3 class="product__title">Cat Energy Slim 1000 г</h3>
-            <table class="product__info product-feature">
+          <li class="catalog__item product">
+            <img class="catalog__product-photo" src="img/buckwheat-slim1000.jpg" alt="Cat Energy Pro 1000 г с гречкой">
+            <h3 class="catalog__product-title">Cat Energy Slim 1000 г</h3>
+            <table class="catalog__product-info product-feature">
               <tr>
-                <td class="product-feature__argument">Объем</td>
-                <td class="product-feature__value">1000 г</td>
+                <td class="catalog__product-argument">Объем</td>
+                <td class="catalog__product-value">1000 г</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Вкус</td>
-                <td class="product-feature__value">Гречка</td>
+                <td class="catalog__product-argument">Вкус</td>
+                <td class="catalog__product-value">Гречка</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Цена</td>
-                <td class="product-feature__value">700 Р.</td>
+                <td class="catalog__product-argument">Цена</td>
+                <td class="catalog__product-value">700 Р.</td>
               </tr>
             </table>
-            <a class="product__btn btn" href="#">Заказать</a>
+            <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
-          <li class="products__item product">
-            <img class="product__photo" src="img/rice-slim500.jpg" alt="Cat Energy Slim 500 г с рисом">
-            <h3 class="product__title">Cat Energy Slim 500 г</h3>
-            <table class="product__info product-feature">
+          <li class="catalog__item product">
+            <img class="catalog__product-photo" src="img/rice-slim500.jpg" alt="Cat Energy Slim 500 г с рисом">
+            <h3 class="catalog__product-title">Cat Energy Slim 500 г</h3>
+            <table class="catalog__product-info product-feature">
               <tr>
-                <td class="product-feature__argument">Объем</td>
-                <td class="product-feature__value">500 г</td>
+                <td class="catalog__product-argument">Объем</td>
+                <td class="catalog__product-value">500 г</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Вкус</td>
-                <td class="product-feature__value">Рис</td>
+                <td class="catalog__product-argument">Вкус</td>
+                <td class="catalog__product-value">Рис</td>
               </tr>
               <tr>
-                <td class="product-feature__argument">Цена</td>
-                <td class="product-feature__value">500 Р.</td>
+                <td class="catalog__product-argument">Цена</td>
+                <td class="catalog__product-value">500 Р.</td>
               </tr>
             </table>
-            <a class="product__btn btn" href="#">Заказать</a>
+            <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
         </ul>
         <div class="catalog__all-products more-goods">
-          <h3 class="more-goods__title">Показать еще 100500 товаров</h3>
-          <p class="more-goods__description">На самом деле вкусов гораздо больше!</p>
-          <a class="more-goods__btn btn" href="#">Показать все</a>
+          <h3 class="catalog__more-goods-title">Показать еще 100500 товаров</h3>
+          <p class="catalog__more-goods-description">На самом деле вкусов гораздо больше!</p>
+          <a class="catalog__more-goods-btn btn" href="#">Показать все</a>
         </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a class="footer__logo" href="index.html">
+      <a class="page-footer__logo" href="index.html">
         <img src="img/footer-logo.svg" alt="Логотип Cat Energy">
       </a>
-      <ul class="footer__social-list social-buttons">
-        <li class="social-buttons__item">
-          <a class="social-btn" href="#" aria-label="мы ВКонтакте">VK</a>
+      <ul class="page-footer__social-list social-buttons">
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-btn" href="#" aria-label="мы ВКонтакте">VK</a>
         </li>
-        <li class="social-buttons__item">
-          <a class="social-btn" href="#" aria-label="мы в Instagram">Instagram</a>
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-btn" href="#" aria-label="мы в Instagram">Instagram</a>
         </li>
-        <li class="social-buttons__item">
-          <a class="social-btn" href="#" aria-label="мы в Facebook">Facebook</a>
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-btn" href="#" aria-label="мы в Facebook">Facebook</a>
         </li>
       </ul>
-      <div class="footer__copyright">
+      <div class="page-footer__copyright">
         <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
