--- a/source/form.html
+++ b/source/form.html
@@ -6,43 +6,44 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo header__logo" href="index.html">
-        <img class="logo__img" src="img/logo.svg" alt="логотип Cat energy" >
+      <a class="logo page-header__logo" href="index.html">
+        <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy" >
       </a>
-      <nav class="site-nav header__site-nav">
-        <ul class="site-nav__list menu">
-          <li class="menu__item">
+      <nav class="site-nav page-header__site-nav">
+        <ul class="page-header__nav-list menu">
+          <li class="page-header__menu-item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="menu__item">
-            <a href="catalog.html">Каталог продукции</a>
+          <li class="page-header__menu-item">
+            <a href="ca
+            ">Каталог продукции</a>
           </li>
-          <li class="menu__item">
-            <a href="#">Подбор программы</a>
+          <li class="page-header__menu-item">
+            <a>Подбор программы</a>
           </li>
         </ul>
       </nav>
-      <button class="burger-btn header__burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
+      <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
     </header>
     <main class="page main">
 
     </main>
-        <footer class="page-footer">
-      <a class="footer__logo" href="index.html">
+    <footer class="page-footer">
+      <a class="page-footer__logo" href="index.html">
         <img src="img/footer-logo.svg" alt="Логотип Cat Energy">
       </a>
-      <ul class="footer__social-list social-buttons">
-        <li class="social-buttons__item">
-          <a class="social-btn" href="#" aria-label="мы ВКонтакте">VK</a>
+      <ul class="page-footer__social-list social-buttons">
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-btn" href="#" aria-label="мы ВКонтакте">VK</a>
         </li>
-        <li class="social-buttons__item">
-          <a class="social-btn" href="#" aria-label="мы в Instagram">Instagram</a>
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-btn" href="#" aria-label="мы в Instagram">Instagram</a>
         </li>
-        <li class="social-buttons__item">
-          <a class="social-btn" href="#" aria-label="мы в Facebook">Facebook</a>
+        <li class="page-footer__social-item">
+          <a class="page-footer__social-btn" href="#" aria-label="мы в Facebook">Facebook</a>
         </li>
       </ul>
-      <div class="footer__copyright">
+      <div class="page-footer__copyright">
         <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
