Исправлена опечатка в названии тега

--- a/source/index.html
+++ b/source/index.html
@@ -86,8 +86,8 @@
             </li>
           </ul>
           <div class="example__slider-controls controls">
-            <buttons class="example__slider-btn" type="button">Было</buttons>
-            <buttons class="example__slider-btn" type="button">Стало</buttons>
+            <button class="example__slider-btn" type="button">Было</button>
+            <button class="example__slider-btn" type="button">Стало</button>
           </div>
         </figure>
       </section>
