Добавлена разметка блока дополнительных товаров и акции

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -169,6 +169,47 @@
           <a class="catalog__more-goods-btn btn" href="#">Показать все</a>
         </div>
       </section>
+      <section class="extra-goods">
+        <h2 class="extra-goods__title">Дополнительные товары</h2>
+        <ul class="extra-goods__list">
+          <li class="extra-goods__item">
+            <h3 class="extra-goods__item-title">Сахарозаменитель</h3>
+            <dl>
+              <dt class="extra-goods__volume">1 упаковка (100 г)</dt>
+              <dd class="extra-goods__price">200 Р.</dd>
+            </dl>
+            <a class="extra-goods__btn" href="#">Заказать</a>
+          </li>
+          <li class="extra-goods__item">
+            <h3 class="extra-goods__item-title">Питьевая вода</h3>
+            <dl>
+              <dt class="extra-goods__volume">5 литров</dt>
+              <dd class="extra-goods__price">50 Р.</dd>
+            </dl>
+            <a class="extra-goods__btn"  href="#">Заказать</a>
+          </li>
+          <li class="extra-goods__item">
+            <h3 class="extra-goods__item-title">Молоко</h3>
+            <dl>
+              <dt class="extra-goods__volume">1 литр</dt>
+              <dd class="extra-goods__price">100 Р.</dd>
+            </dl>
+            <a class="extra-goods__btn" href="#">Заказать</a>
+          </li>
+          <li class="extra-goods__item">
+            <h3 class="extra-goods__item-title">Витамины</h3>
+            <dl>
+              <dt class="extra-goods__volume">1 упаковка (30 г)</dt>
+              <dd class="extra-goods__price">300 Р.</dd>
+            </dl>
+            <a class="extra-goods__btn" href="#">Заказать</a>
+          </li>
+        </ul>
+      </section>
+      <section class="stock">
+        <h2 class="visually-hidden">Акция</h2>
+        <p class="stock__info">Закажите все и получите чехол для кота в подарок!</p>
+      </section>
     </main>
     <footer class="page-footer">
       <a class="page-footer__logo" href="index.html">
