Добавлен блок контактов с картой

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -210,6 +210,11 @@
         <h2 class="visually-hidden">Акция</h2>
         <p class="stock__info">Закажите все и получите чехол для кота в подарок!</p>
       </section>
+      <section class="contacts">
+        <h2 class="contacts__title">Приглашаем к сотруднечеству дилеров!</h2>
+        <p class="contacts__info">ул. Большая Конюшенная, д. 19/8, Санкт-Петербург</p>
+        <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
+      </section>
     </main>
     <footer class="page-footer">
       <a class="page-footer__logo" href="index.html">
