Исправлена ссылка в меню

--- a/source/form.html
+++ b/source/form.html
@@ -15,8 +15,7 @@
             <a href="index.html">Главная</a>
           </li>
           <li class="page-header__menu-item">
-            <a href="ca
-            ">Каталог продукции</a>
+            <a href="catalog.html">Каталог продукции</a>
           </li>
           <li class="page-header__menu-item">
             <a>Подбор программы</a>
