--- a/source/index.html
+++ b/source/index.html
@@ -13,13 +13,13 @@
       <nav class="site-nav page-header__site-nav">
         <ul class="page-header__nav-list menu">
           <li class="page-header__menu-item">
-            <a>Главная</a>
+            <a class="page-header__menu-link">Главная</a>
           </li>
           <li class="page-header__menu-item">
-            <a href="catalog.html">Каталог продукции</a>
+            <a class="page-header__menu-link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="page-header__menu-item">
-            <a href="form.html">Подбор программы</a>
+            <a class="page-header__menu-link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
