Добавлена кнопке-гамбургеру спаны для линий гамбургера

--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,11 @@
           </li>
         </ul>
       </nav>
-      <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню"></button>
+      <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню">
+        <span class="burger-btn__line"></span>
+        <span class="burger-btn__line"></span>
+        <span class="burger-btn__line"></span>
+      </button>
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Cat energy</h1>
