--- a/source/index.html
+++ b/source/index.html
@@ -32,8 +32,10 @@
     <main class="page-main">
       <h1 class="visually-hidden">Cat energy</h1>
       <section class="promo">
-        <h2 class="promo__title">Функциональное питание для котов</h2>
-        <p class="promo__intro">Занялся собой? Займись котом!</p>
+        <div class="promo__text">
+          <h2 class="promo__title">Функциональное питание для котов</h2>
+          <p class="promo__intro">Занялся собой? Займись котом!</p>
+        </div>
         <img class="promo__img" src="img/promo.png" alt="Cat energy Pro с курицей">
         <a class="btn promo__btn" href="form.html">Подобрать программу</a>
       </section>
