--- a/source/index.html
+++ b/source/index.html
@@ -58,15 +58,19 @@
         <h2 class="usage__title section-title">Как это работает</h2>
         <ul class="usage__list process-list">
           <li class="usage__item">
+            <span class="usage__icon usage__icon--leaf"></span>
             Функциональноне питание содержит только полезные питательные вещества.
           </li>
           <li class="usage__item">
+            <span class="usage__icon usage__icon--powder"></span>
             Выпускаются в виде порошка, который нужно лишь залить кипятком и готово.
           </li>
           <li class="usage__item">
+            <span class="usage__icon usage__icon--dinning"></span>
             Замените один-два приема обычной еды на наше функциональное питание.
           </li>
           <li class="usage__item">
+            <span class="usage__icon usage__icon--clock"></span>
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
           </li>
         </ul>
