Добавлен класс ссылке в копирайте

--- a/source/index.html
+++ b/source/index.html
@@ -124,7 +124,7 @@
         </li>
       </ul>
       <div class="page-footer__copyright">
-        <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
   </body>
